# nime24-plugin

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: cmake.yml
modules/: CMakeLists.txt
modules/shared_plugin_helpers/: .clang-format
source/: .clang-format  Biquad.cpp  Biquad.h  CMakeLists.txt  EnvelopeFollower.h  NeuralNetwork.cpp  NeuralNetwork.h  OnsetDetection.cpp  OnsetDetection.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthController.cpp  SynthController.h  TorchDrumLib.cpp  TorchDrumLib.h
source/FeatureExtraction/: CMakeLists.txt  FeatureExtraction.cpp  FeatureExtraction.h  FeatureValue.h  SpectralExtractor.h
source/Synth/: CMakeLists.txt  DrumSynth.cpp  DrumSynth.h  DrumSynthParameters.h  SynthBase.h  SynthParameterBase.h
source/Synth/Modules/: CMakeLists.txt  Envelope.cpp  Envelope.h  ExpDecayEnvelope.cpp  ExpDecayEnvelope.h  Gain.h  Noise.h  SinusoidalOscillator.cpp  SinusoidalOscillator.h  Tanh.h  Tonal.cpp  Tonal.h
source/Utils/: NeuralNetworkMock.cpp  NeuralNetworkMock.h
test/: conftest.py  test_drum_synth.py  test_drum_synth_parameters.py  test_feature_extraction.py  test_feature_value.py  test_onset_detection.py  test_spectral_extractor.py  test_synth_controller.py
test/python_comparison/: test_envelope.py  test_gain.py  test_sinusoidal_osc.py  test_tanh.py
